objects/hed__Affiliation__c.object
<CustomObject><fields>
        <fullName>Academic_Program_Type__c</fullName>
        <description>Display Major or Minor for Academic Programs</description>
        <formula>TEXT(hed__Account__r.Academic_Program_Type__c )</formula>
        <label>Academic Program Type</label>
        <type>Text</type>
    </fields><fields>
        <fullName>hed__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Organization</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Affiliated Contacts</relationshipLabel>
        <relationshipName>Affl_Contacts</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>hed__Affiliation_Type__c</fullName>
        <formula>hed__Account__r.RecordType.Name</formula>
        <label>Affiliation Type</label>
        <type>Text</type>
    </fields><fields>
        <fullName>hed__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Affiliated Accounts</relationshipLabel>
        <relationshipName>Affl_Accounts</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>hed__Description__c</fullName>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>hed__EndDate__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields><fields>
        <fullName>hed__Primary__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If checked, the Affiliation's Organization will be stored on the Contact record.</inlineHelpText>
        <label>Primary</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>hed__Role__c</fullName>
        <label>Role</label>
        <picklist>
            <picklistValues>
                <fullName>Student</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prospect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Applicant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Faculty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employee</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>hed__StartDate__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields><fields>
        <fullName>hed__Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Current</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Former</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>hed__HEDA_Affiliation_Compact_Layout</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><deprecated>false</deprecated><description>Connection between a Contact and an Account.</description><enableActivities>false</enableActivities><enableBulkApi>true</enableBulkApi><enableFeeds>false</enableFeeds><enableHistory>true</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><label>Affiliation</label><nameField>
        <displayFormat>AF-{000000}</displayFormat>
        <label>Affiliation Key</label>
        <type>AutoNumber</type>
    </nameField><pluralLabel>Affiliations</pluralLabel><sharingModel>Private</sharingModel><listViews>
        <fullName>hed__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews></CustomObject>